doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\Tech Fast Australia\Desktop\JAVA\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\bluejcore.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-4.12.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-jupiter-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-jupiter-api-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-jupiter-engine-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-jupiter-params-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-commons-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-console-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-console-standalone-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-engine-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-launcher-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-reporting-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-runner-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-suite-api-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-platform-testkit-1.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-quickcheck-core-0.9.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\junit-vintage-engine-5.5.2.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\hamcrest-core-1.3.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\hamcrest-library-1.3.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\lang-stride.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.base.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.controls.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.fxml.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.graphics.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.media.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.properties.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.swing.jar;C:\Users\Tech Fast Australia\Desktop\JAVA\bluej\lib\javafx\lib\javafx.web.jar;C:\Users\Tech Fast Australia\Desktop\Calculator
-d
C:\Users\Tech Fast Australia\Desktop\Calculator\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Tech Fast Australia\Desktop\Calculator\SortStudent.java
<---- end of javadoc command ---->
Loading source file C:\Users\Tech Fast Australia\Desktop\Calculator\SortStudent.java...
Constructing Javadoc information...
C:\Users\Tech Fast Australia\Desktop\Calculator\SortStudent.java:50: error: cannot find symbol
    private int binarySearch(ArrayList<Student.name> list,String n){
                                              ^
  symbol:   class name
  location: class SortStudent.Student
1 error
